--- a/Getting Started in NLP.ipynb
+++ b/Getting Started in NLP.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Level 1 - Getting Started with Natural Language Processing"
+    "# Getting Started with Natural Language Processing"
    ]
   },
   {
