--- a/Getting Started in NLP.ipynb
+++ b/Getting Started in NLP.ipynb
@@ -11,10 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial is targeted at Machine learning beginners who are looking to get started quickly using Amazon's Natural Language Processing APIs.  In this tutorial we will explore how to send and receive data from the AWS Comprehend API using both the UI, and programatically in Python.  \n",
-    "\n",
-    "**Tutorial Prerequisites**\n",
-    "- Basic understanding of Python"
+    "This tutorial is targeted at Machine learning beginners who are looking to get started quickly using Amazon's Natural Language Processing APIs.  In this tutorial we will explore how to send and receive data from the Amazon Comprehend API using both the UI, and programatically in Python.  "
    ]
   },
   {
@@ -63,14 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Lab:** Getting Started Using the AWS Comprehend UI"
+    "# **Lab:** Getting Started Using the Amazon Comprehend UI"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Getting started with AWS Comprehend is easy! We will walk through getting started on Amazon Comprehend using the provided UI.\n",
+    "Getting started with Amazon Comprehend is easy! We will walk through getting started on Amazon Comprehend using the provided UI.\n",
     "1) Navigate to [Amazon Comprehend](https://aws.amazon.com/comprehend/) Click `Get Started with Amazon Comprehend` \n",
     "\n",
     "2) Select `Launch Amazon Comprehend` to launch the real time analysis tool.\n",
@@ -93,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Lab:** Integrating with AWS Comprehend using Python\n",
+    "# **Lab:** Integrating with Amazon Comprehend using Python\n",
     "Amazon has made it easy to use their services with Python by publishing an SDK called `boto3`. It is imported like any other library in Python is, and with it, we can construct what is called a *client*. If you've never used service SDKs like this before, the concept of a \"client\" will come up a lot. In short, a client is an object that we provide some basic information such as AWS region and what service we want. This object then will have easy-to-use functions for each thing we'd like to do.\n",
     "\n",
     "Below is an example of detecting entities on the string *It is raining today in Seattle*. A breakdown of the code can be found below the output."
