Change to Oregon

--- a/Getting Started in NLP.ipynb
+++ b/Getting Started in NLP.ipynb
@@ -163,7 +163,7 @@
     "The first two lines of the code are just importing the libraries we need - `boto3` being Amazon's client library, and `json` being a utility to format the output we receive from them.  \n",
     "\n",
     "```\n",
-    "comprehend = boto3.client(service_name='comprehend', region_name='us-east-1')\n",
+    "comprehend = boto3.client(service_name='comprehend', region_name='us-west-2')\n",
     "```  \n",
     "The call `boto3.client` is used to build a client for many of Amazon's services - this is why we must say we'd like a Comprehend client by passing a `service_name` argument. The `region_name` argument is set to the AWS Region your project is in - you can see this string by clicking the region dropdown at the top of the AWS console.\n",
     "\n",
