Direct link to console

--- a/Getting Started in NLP.ipynb
+++ b/Getting Started in NLP.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "Getting started with Amazon Comprehend is easy! We will walk through getting started on Amazon Comprehend using the provided UI.\n",
     "\n",
-    "1) Navigate to [Amazon Comprehend](https://aws.amazon.com/comprehend/) Click `Get Started with Amazon Comprehend` \n",
+    "1) Navigate to [Amazon Comprehend Console](https://us-west-2.console.aws.amazon.com/comprehend/v2/home?region=us-west-2#welcome). \n",
     "\n",
     "2) Select `Launch Amazon Comprehend` to launch the real time analysis tool.\n",
     "\n",
