--- a/Getting Started in NLP.ipynb
+++ b/Getting Started in NLP.ipynb
@@ -142,7 +142,7 @@
     "import boto3\n",
     "import json\n",
     "\n",
-    "comprehend = boto3.client(service_name='comprehend', region_name='us-east-1')\n",
+    "comprehend = boto3.client(service_name='comprehend', region_name='us-west-2')\n",
     "text = \"It is raining today in Seattle\"\n",
     "\n",
     "entities = comprehend.detect_entities(Text=text, LanguageCode='en')\n",
@@ -211,7 +211,7 @@
     "import json\n",
     "\n",
     "# Set up the client library\n",
-    "comprehend = boto3.client(service_name='comprehend', region_name='us-east-1')\n",
+    "comprehend = boto3.client(service_name='comprehend', region_name='us-west-2')\n",
     "\n",
     "# Specify the string we're going to send to the NLP process\n",
     "text = \"It's a shame that it's raining in Seattle today.\"\n",
